@@ -370,6 +370,14 @@ if CONFIG.ENABLE_NOTIFICATION == 'Yes' and CONFIG.get_setting('buildname'):
     show_notification()
 else:
     logging.log('[Notifications] Not Enabled', level=xbmc.LOGINFO)
+    
+######################################
+# KODI-RD-IL - FIRST BUILD LAUNCH BUILD SKIN SWITCH NOTIFICATION
+if CONFIG.get_setting('buildname') and CONFIG.get_setting('build_skin_switch_notifcation_dismiss') == 'false':
+    CONFIG.set_setting('build_skin_switch_notifcation_dismiss', 'true')
+    msg = f"על מנת להחליף סקין יש ללחוץ: כפתור כיבוי --> החלף סקין.\nהסקינים הקיימים בבילד:\n1. סקין Estuary\n2. סקין FENtastic"
+    window.show_notification_with_extra_image(msg, 888, CONFIG.BUILD_SKIN_SWITCH_IMAGE_URL)
+#####################################
 
 ######################################
 # KODI-RD-IL - AUTO QUICK UPDATE
