@@ -1,3 +1,7 @@
+[COLOR yellow][B]v1.5.6[/B][/COLOR]
+* Rename NotificationsWithDownloaderImage.xml to NotificationsWithExtraImage.xml.
+* Change function show_notification_with_extra_image to get generic image id and URL.
+* Add build skin switch notifcation window on manual build skin switch / first build launch.
 [COLOR yellow][B]v1.5.5[/B][/COLOR]
 * Wizard auto update - Change dialog progress to BG for smoother wizard update.
 [COLOR yellow][B]v1.5.4[/B][/COLOR]
